# 4th_semester

./: README.md
Int_microscope/: Dot_dump.txt  Int_dump.html  README.md  main  main.cpp  makefile  style.css
Int_microscope/Microscope/: Dot_dump.cpp  Dot_dump.hpp  Dump_messages.cpp  Dump_messages.hpp  Int_dumper.cpp  Int_dumper.hpp  Int_listing.cpp  Operations_history.cpp  Operations_history.hpp  Test1.hpp
Int_microscope/Research/: funny_move.jpg~
Int_microscope/math_structures/: AVLtree.hpp  Int_container.hpp  Int_signal_receiver.hpp  Int_signal_types.hpp  Intercepted_int.cpp  Intercepted_int.hpp
Move&forwarding/: Dot_dump.txt  Int_dump.html  README.md  main  main.cpp  makefile
Move&forwarding/Cplusplus_referencing/: My_forwarding.cpp  My_forwarding.hpp  My_move.cpp  (+1 more)
My_string/: CMakeLists.txt  README.md
Studying_templates/: .gitignore
Studying_templates/Container/: CMakeLists.txt  Makefile  README.md  main  main.cpp  makefile
Studying_templates/Container/src/: Container.cpp  Container.hpp  Dynamic_mem.cpp  Dynamic_mem.hpp  Static_mem.cpp  Static_mem.hpp
Studying_templates/Container/src/Container/: Chuncked_mem.hpp  Container.cpp  Container.hpp  Dynamic_mem.cpp  Dynamic_mem.hpp  Static_mem.cpp  Static_mem.hpp
Studying_templates/Container/src/Storages/: Chunked_mem.hpp  Dynamic_mem.hpp  Static_mem.hpp
Studying_templates/Container/src/Trainings/: Chunked_mem_tests.hpp  Dynamic_mem_tests.hpp  Static_mem_tests.hpp
Studying_templates/Container/src/Types/Intercepted_int/: Intercepted_int.cpp
Studying_templates/Container/src/Types/No_default_constructor/: No_default_constructor.hpp
Studying_templates/Math_vector/: CMakeLists.txt
Studying_templates/Math_vector/src/Math_vector/: Math_vector.hpp
Studying_templates/Math_vector/src/Usage/: main.cpp
(+208 files in other folders)
